# hermes

./: .gitignore  CLAUDE.md  CMakeLists.txt
.claude/skills/gc-safe-coding/: SKILL.md
.github/actions/setup-node/: action.yml
.github/workflows/: build-hermesc-windows.yml  build.yml  perf-build-rpi.yml  rn-build-hermes.yml
API/: CMakeLists.txt
API/hermes/: CMakeLists.txt  ScriptStore.h  TraceInterpreter.cpp  TracingRuntime.cpp  TracingRuntime.h  hermes.cpp  hermes.h  hermes_api.h  hermes_napi.cpp  hermes_node_api.cpp  hermes_node_api.h
API/hermes/cdp/: CDPAgent.cpp  DebuggerDomainAgent.cpp  DebuggerDomainAgent.h  MessageTypes.cpp  MessageTypes.h
API/hermes/extensions/: 11-Worker.js  CMakeLists.txt  Extensions.cpp  JSIUtils.cpp  Worker.cpp  Worker.h
API/hermes_abi/: hermes_vtable.cpp
API/hermes_node_api/: hermes_node_api.cpp  hermes_node_api.h
API/jsi/jsi/: hermes.h
API/napi/: CMakeLists.txt  COMPATIBILITY.md  README.md  hermes_napi.cpp  hermes_napi.h  hermes_napi_arraybuffer.cpp  hermes_napi_async_context.cpp  hermes_napi_async_work.cpp  hermes_napi_bigint.cpp  hermes_napi_buffer.cpp  hermes_napi_compile.cpp  hermes_napi_compile.h  hermes_napi_dataview.cpp  hermes_napi_error.cpp  hermes_napi_external.cpp  hermes_napi_function.cpp  hermes_napi_impl.h  hermes_napi_internal.h  hermes_napi_object.cpp  hermes_napi_promise.cpp  hermes_napi_reference.cpp  hermes_napi_scope.cpp  hermes_napi_string.cpp  hermes_napi_tsfn.cpp  hermes_napi_typedarray.cpp  hermes_napi_typetag.cpp  hermes_napi_value.cpp  hermes_napi_wrap.cpp
API/node-api/: js_native_api.h
android/: build.gradle  build.gradle.kts
android/hermes/: build.gradle
doc/: Features.md  TypedLanguage.md
doc/blog/: 2026-06-05-new-hermes-stable-release.md  README.md
lib/: CMakeLists.txt
lib/AST/: CMakeLists.txt  ESTree.cpp  TransformAST.cpp  TransformDecorate.cpp
lib/BCGen/: LivenessRegAllocIRPrinter.h  Lowering.cpp  RegAlloc.cpp
lib/CompilerDriver/: CompilerDriver.cpp
lib/ConsoleHost/: CMakeLists.txt  ConsoleHost.cpp
lib/IR/: IR.cpp  IRBuilder.cpp  IREval.cpp  IRVerifier.cpp  Instrs.cpp  TypeContext.cpp
lib/IRGen/: ESTreeIRGen-expr.cpp  ESTreeIRGen-func.cpp  ESTreeIRGen-typed-class.cpp  ESTreeIRGen.cpp  ESTreeIRGen.h
lib/InternalBytecode/: 01-Promise.js
lib/InternalJavaScript/: 01-Promise.js  02-AsyncFn.js  04-AsyncIterator.js
lib/Parser/: JSLexer.cpp  JSParserImpl-flow.cpp  JSParserImpl.cpp
lib/Regex/: Executor.cpp  RegexParser.cpp  RegexSerialization.cpp
lib/Sema/: ESTreeClone.cpp  FlowChecker-expr.cpp  FlowChecker-scopetypes.cpp  FlowChecker.cpp  FlowChecker.h  FlowContext.cpp  FlowTypesDumper.cpp  SemanticResolver.cpp  SemanticResolver.h
lib/Support/: OSCompatPosix.cpp  OSCompatWindows.cpp
lib/TypedLib/: 01-array.js  02-string.js  03-map.js  04-set.js  CMakeLists.txt  TypedLib.cpp
lib/Utils/: Dumper.cpp
lib/VM/: ArrayStorage.cpp  CMakeLists.txt  FastArray.cpp  IdentifierTable.cpp  JSArray.cpp  JSError.cpp  OrderedHashMap.cpp  Runtime.cpp  SerializedValue.cpp  StaticH.cpp
npm/hermes-compiler/: package.json
test/: lit.cfg
test/Parser/: for-using-declarator.js  for-using.js
test/Sema/: deep-ast-err.js  for-using-not-supported.js
test/ffi/: fopen.js
test/hermes/: array-toSorted.js  async-dep-promise.js  es6-class-static-method.js  for-await-of-close-getmethod-throw.js  function-tostring-builtins-microtask.js  hermes-internal.js  map.js  promise-all-async.js  promise-jobs-scheduled-in-scripts.js  promise-jobs-scheduled-in-tasks.js  promise-try.js  promise-with-resolvers.js  promise.js  regexp-escape.js  regexp.js  regexp_unicode_properties.js  regress-class-spill-register.js  regress-create-class-handle-leak.js  regress-date-setters-invalid.js  regress-put-by-index-handle-leak.js  regress-shared-dictionary-hc-json.js  regress-shared-dictionary-hc-regexp.js  regress-typedarray-view-bounds.js
test/jit/: new-object-parent-global-reg.js
test/napi/: async-work-basic.run  async-work-many.run  compile-bytecode.run  load-native-module-errors.js  load-native-module.run  run-bytecode.run  test_addon.run  text-encoder-napi.js  tsfn-from-thread.run  typescript.run
test/shermes/: strict-equal-inline-fastpath.js
tools/: CMakeLists.txt
tools/hdb/: hdb.cpp
tools/hermes/: CMakeLists.txt  evaluate-line.js  hermes.cpp
tools/hermesc/: hermesc.cpp
tools/hvm/: CMakeLists.txt
tools/napi-runner/: CMakeLists.txt  napi-runner.cpp
tools/shermes/: ConsoleBindings.cpp  shermes.cpp
tools/synth/: CMakeLists.txt
tools/test-runner/: DESIGN.md  Executor.cpp  Executor.h  HarnessCache.h  Skiplist.h  TestDiscovery.h  main.cpp
unittests/: CMakeLists.txt
unittests/API/: APITest.cpp  APITestFactory.cpp  CMakeLists.txt  SegmentTestCompile.cpp  SynthTraceTest.cpp
unittests/BCGen/: HBC.cpp  TestHelpers.cpp
unittests/IR/: BasicBlockTest.cpp  BuilderTest.cpp  CMakeLists.txt  IRHashTest.cpp  IRTypeContextTest.cpp  IRUtilsTest.cpp  IRVerifierTest.cpp  LoopAnalysisTest.cpp  TypeContextTest.cpp  VariableTest.cpp
unittests/NodeApi/: CMakeLists.txt
unittests/Support/: HermesSafeMathTest.cpp
unittests/VMRuntime/: ArrayStorageTest.cpp  FinalizationRegistryTest.cpp  TestHelpers1.cpp
unittests/napi/: CMakeLists.txt  NapiAddFinalizerTest.cpp  NapiArrayBufferTest.cpp  NapiAsyncContextTest.cpp  NapiAsyncWorkTest.cpp  NapiBigIntTest.cpp  NapiCallFunctionTest.cpp  NapiCallbackScopeTest.cpp  NapiCleanupHookTest.cpp  NapiCoercionTest.cpp  NapiComparisonTest.cpp  NapiCreateFunctionTest.cpp  NapiDataViewTest.cpp  NapiDefineClassTest.cpp  NapiEnvTest.cpp  NapiExceptionTest.cpp  NapiExternalArrayBufferTest.cpp  NapiExternalTest.cpp  NapiFunctionTest.cpp  NapiHandleScopeTest.cpp  NapiInstanceDataTest.cpp  NapiModuleLoadTest.cpp  NapiModuleTest.cpp  NapiNewInstanceTest.cpp  NapiObjectTest.cpp  NapiPromiseTest.cpp  NapiReferenceTest.cpp  NapiRunScriptTest.cpp  NapiStringTest.cpp  NapiTestFixture.h  NapiTsfnTest.cpp  NapiTypeTagTest.cpp  NapiTypedArrayTest.cpp  NapiValueTest.cpp  NapiWrapTest.cpp  napi_async_work_addon.c  test_addon.c
utils/: genUnicodeTable.py
utils/testsuite/: skiplist.json
(+310 files in other folders)
